# pydantic-ai-toolbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: CHANGELOG.md  CUSTOM.md  EXAMPLES.md  FILESYSTEM.md  INSTALL.md  MEMORY.md  MKDOCS.md  PANDAS.md  RAG.md  SQL.md  SYSTEM.md  WRITING.md  index.md
examples/: filesystem_example.py  memory_example.py  pandas_example.py  quickstart.py  rag_example.py  sql_example.py  system_example.py
pydantic_ai_toolbox/: __init__.py  base.py
pydantic_ai_toolbox/toolsets/: __init__.py  filesystem.py  memory.py  pandas.py  rag.py  sql.py  system.py
pydantic_ai_toolkits/: __init__.py  base.py
pydantic_ai_toolkits/toolkits/: __init__.py  filesystem.py  memory.py  pandas.py  rag.py  sql.py
tests/: conftest.py  test_example_flows.py  test_public_api.py
tests/toolkits/: __init__.py  test_filesystem.py  test_memory.py  test_pandas.py  test_rag.py  test_sql.py
tests/toolsets/: __init__.py  test_filesystem.py  test_memory.py  test_pandas.py  test_rag.py  test_sql.py  test_system.py
